<resources>
    <string name="app_name">Unter-utd</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">home_page</string>
    <string name="title_activity_rider_login">rider_login</string>
    <string name="title_activity_rider_signup">rider_signup</string>
    <string name="title_activity_driver_login">driver_login</string>
    <string name="title_activity_driver_signup">driver_signup</string>
    <string name="dsignup_username">User Name</string>
    <string name="dsignup_password">Password</string>
    <string name="dlogin">Log In as Driver</string>
    <string name="dsignup_name"> Name</string>
    <string name="dsignup_phone">Phone Number</string>
    <string name="dsignup_email">Email</string>
    <string name="Address_label">Address</string>
    <string name="dsignup_addrStreet">Address Street</string>
    <string name="dsignup_addrUnit"> Unit Number</string>
    <string name="dsignup_addrCity">City</string>
    <string name="dsignup_addrState">State</string>
    <string name="dsignup_addrZipcode">Zip Code</string>
    <string name="dcreditcard_details">Payment Details</string>
    <string name="daddPayment_credit_card_hint">Card Number</string>
    <string name="daddPayment_mm_hint">MM</string>
    <string name="daddPayment_yy_hint">YY</string>
    <string name="daddPayment_cvv_hint">CVV</string>
    <string name="ddriverslicense_details">License Details</string>
    <string name="dsignup_licensenumber">License Number</string>
    <string name="dsignup_licenseexpirydate_mmddyyyy">Expiry DateMM/DD/YYYY </string>
    <string name="dsignup_licensestate">License State</string>
    <string name="dinsurance_details">Insurance Details</string>
    <string name="dsignup_insuranceprovider">Insurance Provider</string>
    <string name="dsignup_insurancepolicynumber">Insurance Policy Number</string>
    <string name="dsignup_insurancetype">Insurance Type</string>
    <string name="dsignup_insuranceexpirydate_mmddyyyy">Expiry Date MM/DD/YYYY</string>
    <string name="dsignup_register">Register</string>
    <string name="signupasdriver_button">Signup as Driver</string>
    <string name="signupasrider_button">Signup as Rider</string>
    <string name="logindriver_button">Login as Driver</string>
    <string name="loginrider_button">Login as Rider </string>
    <string name="rlogin">Login as Rider</string>
    <string name="rsignup_username">User Name</string>
    <string name="rsignup_password">Password</string>
    <string name="rsignup_name"> Name</string>
    <string name="rsignup_phone">Phone Number</string>
    <string name="rsignup_email">Email</string>
    <string name="rsignup_addrStreet">Address Street</string>
    <string name="rsignup_addrUnit"> Unit Number</string>
    <string name="rsignup_addrCity">City</string>
    <string name="rsignup_addrState">State</string>
    <string name="rsignup_addrZipcode">Zip Code</string>
    <string name="rcreditcardnetwork">Credit Card Network</string>
    <string name="dcreditcardnetwork">Credit Card Network</string>
    <string name="rcreditcard_details">Payment Details</string>
    <string name="raddPayment_credit_card_hint">Card Number</string>

    <string name="raddPayment_mm_hint">MM</string>
    <string name="raddPayment_yy_hint">YY</string>
    <string name="raddPayment_cvv_hint">CVV</string>
    <string name="rsignup_next">Register as Rider</string>
    <string name="title_activity_driver_status">driver_status</string>
    <string name="Change_your_status">Change Your Status</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="status">Status :</string>
    <string name="passenger_details">Passeneger Details</string>
    <string name="check_for_rides">Check For Rides</string>
    <string name="rating_label">Rating label</string>
    <string name="accept_rating_button">Accept Rating</string>
    <string name="dropoff_location">Drop Off Location</string>
    <string name="pickup_location">Pick Up Location</string>
    <string name="customer_name">Customer Name</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="request_unter">Request Unter</string>
    <string name="customer_contact">Contact Number</string>
    <string name="beginridebutton">Begin Ride</string>
    <string name="endridebutton">End Ride</string>
    <string name="available_rides_near_you">Available Rides Near You</string>
    <string name="title_activity_driver_ridelist">driver_ridelist</string>
    <string name="title_activity_driver_rating">driver_rating</string>
    <string name="title_activity_driver_ridesummary">driver_ridesummary</string>
    <string name="track_driver">You are Now Tracking Driver</string>
    <string name="current_location">Current Location</string>
    <string name="destination">Destination</string>
    <string name="distance">Distance</string>
    <string name="permile">Per Mile</string>
    <string name="cab_details_progress_text">Fetching cab Details</string>
    <string name="cab_reach_time">Estimated Reach Time</string>
    <string name="driver_name">Driver Name</string>
    <string name="contact">Contact</string>
    <string name="cab_num">Cab Number</string>
    <string name="cabtype">Cab Type</string>
    <string name="accept_ride_details_button">Accept Ride Details</string>
    <string name="fee_label">Total Ride Fee</string>
    <string name="distance_label">Distance Travelled</string>
    <string name="time_label">Time Taken</string>
    <string name="origin_label">Origin</string>
    <string name="destination_label">Destination</string>




    <string name="title_activity_driver_navigation">Map</string>
    <string name="title_activity_rider_selectdestination">Map</string>
    <string name="title_activity_rider_ridesummary">rider_ridesummary</string>
    <string name="title_activity_rider_rating">rider_rating</string>
    <string name="title_activity_tracking_driver">Map</string>
</resources>
