<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context="com.dzt.unter.SignupFragment"
        android:layout_margin="25dp">>


        <EditText
            android:id="@+id/dsignup_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_username"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="25dp"/>
        <EditText
            android:id="@+id/dsignup_password"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_password"
            android:layout_below="@+id/dsignup_username"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/dsignup_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_name"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/dsignup_password"
            android:layout_marginBottom="23dp"
            />

        <EditText
            android:id="@+id/dsignup_phone"
            android:maxLength="10"
            android:inputType="phone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_phone"
            android:layout_below="@+id/dsignup_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="22dp"/>

        <EditText
            android:id="@+id/dsignup_email"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_email"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dsignup_phone"
            android:layout_marginBottom="21dp"
            />
        <TextView
            android:id="@+id/dsignup_addresslabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Address_label"
            android:layout_below="@+id/dsignup_email"
            />
        <EditText
            android:id="@+id/dsignup_addrStreet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_addrStreet"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dsignup_addresslabel"
            android:layout_marginBottom="20dp"
            />
        <EditText
            android:id="@+id/dsignup_addrUnit"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_addrUnit"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dsignup_addrStreet"
            android:layout_marginBottom="14dp"
            />
        <EditText
            android:id="@+id/dsignup_addrCity"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_addrCity"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dsignup_addrUnit"
            android:layout_marginBottom="13dp"
            />
        <EditText
            android:id="@+id/dsignup_addrState"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_addrState"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dsignup_addrCity"
            android:layout_marginBottom="12dp"
            />

        <EditText
            android:id="@+id/dsignup_addrZipcode"
            android:maxLength="5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_addrZipcode"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dsignup_addrState"
            android:layout_marginBottom="11dp"
            />
        <TextView
            android:id="@+id/dsignup_creditcarddetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dcreditcard_details"
            android:layout_below="@+id/dsignup_addrZipcode"
            />
        <EditText
            android:id="@+id/dsignup_cardnetwork"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="16"
            android:layout_below="@+id/dsignup_creditcarddetails"
            android:hint="@string/dcreditcardnetwork"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/dsignup_cardnumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="16"
            android:layout_below="@+id/dsignup_creditcarddetails"
            android:hint="@string/daddPayment_credit_card_hint"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/dregisterPayment_mm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/daddPayment_mm_hint"
            android:layout_below="@+id/dsignup_cardnumber"
            android:layout_marginBottom="9dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/dregisterPayment_yy"
            />

        <EditText
            android:id="@+id/dregisterPayment_yy"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/daddPayment_yy_hint"
            android:layout_below="@+id/dsignup_cardnumber"
            android:layout_toLeftOf="@+id/dregisterPayment_cvv"
            />

        <EditText
            android:id="@+id/dregisterPayment_cvv"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/daddPayment_cvv_hint"
            android:layout_below="@+id/dsignup_cardnumber"
            android:layout_alignParentRight="true"
            />

        <TextView
            android:id="@+id/dsignup_driverlicensedetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ddriverslicense_details"
            android:layout_below="@+id/dregisterPayment_cvv"
            />
        <EditText
            android:id="@+id/dsignup_licensenumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_licensenumber"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dsignup_driverlicensedetails"
            android:layout_marginBottom="7dp"
            />
        <EditText
            android:id="@+id/dsignup_licenseexpirydate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_licenseexpirydate_mmddyyyy"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dsignup_licensenumber"
            android:layout_marginBottom="2dp"
            />

        <EditText
            android:id="@+id/dsignup_licensestate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_licensestate"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dsignup_licenseexpirydate"
            android:layout_marginBottom="6dp"
            />

        <TextView
            android:id="@+id/dsignup_insurancedetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinsurance_details"
            android:layout_below="@+id/dsignup_licensestate"
            />

        <EditText
            android:id="@+id/dsignup_insuranceprovider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_insuranceprovider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dsignup_insurancedetails"
            android:layout_marginBottom="5dp"
            />
        <EditText
            android:id="@+id/dsignup_insurancepolicynumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_insurancepolicynumber"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dsignup_insuranceprovider"
            android:layout_marginBottom="4dp"
            />
        <EditText
            android:id="@+id/dsignup_insurancetype"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_insurancetype"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dsignup_insurancepolicynumber"
            android:layout_marginBottom="3dp"
            />

        <EditText
            android:id="@+id/dsignup_insuranceexpirydate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dsignup_insuranceexpirydate_mmddyyyy"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dsignup_insurancetype"
            android:layout_marginBottom="2dp"
            />




        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dsignup_next"
            android:text="@string/dsignup_register"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="2dp"
            android:layout_below="@+id/dsignup_insuranceexpirydate"/>


    </RelativeLayout>
</ScrollView>