<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dzt.unter.LoginFragment"
    android:layout_margin="20dp">

    <EditText
        android:id="@+id/dlogin_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dsignup_username"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/dlogin_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dlogin_username"
        android:inputType="textPassword"
        android:hint="@string/dsignup_password"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/dlogin_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dlogin_password"
        android:text="@string/dlogin"/>

</RelativeLayout>
