<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dzt.unter.LoginSignupFragment"
    android:layout_margin="20dp">

    <Button
        android:id="@+id/signupasdriver_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/signupasdriver_button"
        android:layout_gravity="bottom"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="43dp" />

    <Button
        android:id="@+id/logindriver_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/logindriver_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/loginrider_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/loginrider_button"
        android:layout_below="@+id/logindriver_button"
        android:layout_alignLeft="@+id/logindriver_button"
        android:layout_alignStart="@+id/logindriver_button" />


    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/signupasrider_button"
        android:layout_marginTop="74dp"
        android:layout_below="@+id/loginrider_button"
        android:layout_alignLeft="@+id/loginrider_button"
        android:layout_alignStart="@+id/loginrider_button" />


</RelativeLayout>
</ScrollView>